# cmb_template

./: CMakeLists.txt  README.md  cmb_presets.json
src/: main.c
